# physics

./: .gitignore  CMakeLists.txt  ReadMe.md  bartel.cpp  clothbw.cpp  clothsim.cpp  constitutive_law.cpp  energy.h  explicitfem.cpp  explicitfem.h  fluid.cpp  implicitfem.cpp  implicitfem.h  main.cpp  mpm.cpp  out.txt  rigidbody.cpp  rigidbody.h  simplefem.cpp  spmat.txt  test_lapack.cpp
autodiff/: CMakeLists.txt  elasticity.f90
core/: CMakeLists.txt  adjacency_matrix.h  def.h  edge_topology.h  energy.cpp  energy.h  extract_edges.h  ichol.h  io.cpp  io.h  macros.h  massmatrix.cpp  massmatrix.h  meshgen.h  optimizer.cpp  optimizer.h  readOBJ.h  scalar_op.h  timer.h  util.cpp  util.h  writeSpMat.h
delta/: diff_helper.h  svd_dd.cpp  test.cpp  two_points_diff.cpp  types.h
inputs/: clothsim.json  explicitfem.json  implicitfem.json  rb.json  simplefem.json
references/fortran/: arr  arr.f90  hello.f90  var.f90
references/mac/: energy.f90  energy.mac  jacob.mac  mj_fortran2.mac
